--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jogo da memória</title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo-menu.css">
 </head>
+
 <body>
-    
+    <header>
+        <ul>
+            <li id="vidas"></li>
+            <li id="pontos"></li>
+        </ul>
+    </header>
+
+    <section id="Jogo" class="inativo">
+        
+    </section>
+    <section id="menu">
+        <button id="novoJogoF">Novo jogo fácil</button>
+        <button id="novoJogoM">Novo jogo médio</button>
+        <button id="novoJogoD">Novo jogo difícil</button>
+    </section>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
