Criando arquivo de regras e adicionando as funcionalidades aos botões

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     </header>
 
     <section id="Jogo" class="inativo">
-        
+
     </section>
+
     <section id="menu">
         <button id="novoJogoF">Novo jogo fácil</button>
         <button id="novoJogoM">Novo jogo médio</button>
         <button id="novoJogoD">Novo jogo difícil</button>
     </section>
+
+    <script src="js/iniciarSistema.js"></script>
     <script src="js/script.js"></script>
 </body>
 
