--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da memória</title>
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/cartas.css">
     <link rel="stylesheet" href="css/estilo-menu.css">
 </head>
 
@@ -18,7 +19,7 @@
         </ul>
     </header>
 
-    <section id="Jogo" class="inativo">
+    <section id="jogo" class="">
 
     </section>
 
